# Voice-Memo-Decoder

./: .replit  .swp  main.py  pyproject.toml  replit.nix  transcription.txt
templates/: index.html  transcription_preview.html  transcription_result.html
transcriptions/: Test_File.m4a.txt  Test_File.m4a_diagnostics.json  Zoox_Onsite_Panel_pt2_2.m4a.txt  Zoox_Onsite_Panel_pt2_2.m4a_diagnostics.json  improved_transcription.txt  transcription.txt
