[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "openai>=1.55.0",
    "psutil>=6.1.0",
    "pydub>=0.25.1",
    "python-magic>=0.4.27",
    "requests>=2.32.3",
    "werkzeug>=3.1.3",
]
